# alx-low_level_programming-1

./: README.md
0x00-hello_world/: 101-quote.c  4-puts.c  5-printf.c  6-size.c  Makefile  README.md
0x01-variables_if_else_while/: 1-last_digit.c  100-print_comb3.c  101-print_comb4.c  102-print_comb5.c  5-print_numbers.c  6-print_numberz.c  8-print_base16.c  9-print_comb.c  README.md
0x02-functions_nested_loops/: 1-alphabet.c  10-add.c  100-times_table.c  101-natural.c  102-fibonacci.c  103-fibonacci.c  104-fibonacci.c  2-print_alphabet_x10.c  4-isalpha.c  5-sign.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  Makefile
0x03-debugging/: 2-largest_number.c  3-print_remaining_days.c  Makefile  README.md  main.h
0x04-more_functions_nested_loops/: 10-print_triangle.c  Makefile  README.md
0x05-pointers_arrays_strings/: 0-reset_to_98.c  101-keygen.c  4-print_rev.c  7-puts_half.c  9-strcpy.c  Makefile
0x06-pointers_arrays_strings/: 100-rot13.c  102-magic.c  103-infinite_add.c  104-print_buffer.c  7-leet.c  CMakeLists.txt  README.md
0x06-pointers_arrays_strings/tests/: 104-main.c
0x07-pointers_arrays_strings/: 2-strchr.c  Makefile  README.md  main.h
0x08-recursion/: 0-puts_recursion.c  README.md  main.h
0x09-static_libraries/: README.md  create_static_lib.sh
0x0A-argc_argv/: 0-whatsmyname.c  Makefile  README.md
0x0B-malloc_free/: 0-create_array.c  101-strtow.c  README.md
0x0C-more_malloc_free/: 1-string_nconcat.c  101-mul.c  README.md
0x0D-preprocessor/: README.md
0x0E-structures_typedef/: 4-new_dog.c
0x0F-function_pointers/: README.md  (+1 more)
(+38 files in other folders)
